<resources>
    <string name="app_name">CCET-IPD</string>
    <string name="start">start</string>
    <string name="home">Home</string>
    <string name="team">People</string>
    <string name="register">Register</string>
    <string name="rules">Instructions</string>
    <string name="date">Date</string>
    <string name="event">Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>

    <string name="spinner_title">Select Category</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>
