<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/home"
        android:title="@string/home" />


    <item
        android:id="@+id/eventItem"
        android:icon="@drawable/calender"
        android:title="@string/event" />


    <item
        android:id="@+id/rulesItem"
        android:icon="@drawable/rules"
        android:title="@string/rules" />

    <item
        android:id="@+id/registerItem"
        android:icon="@drawable/register"
        android:title="@string/register" />

    <item
        android:id="@+id/developItem"
        android:icon="@drawable/people"
        android:title="@string/team" />







</menu>